# chat

./: .gitignore  identity_conversations.jsonl  pyproject.toml  run.sh  run_autodl.sh  run_base.sh  run_multi.sh
bpe/: base.py  baseTokenizer.py  tiktokenTokenizer.py  tokTrainer.py  tokenizer.py
nanochat/: adamw.py  checkpoint.py  core_eval.py  flash_attention.py  gpt.py  kv_cache.py  loss_eval.py  sample_eval.py  tasks.py
scripts/: base_eval.py  base_train.py  bpe_train.py  chat_sft.py  data_downloader.py  mid_train.py
test/: dataloader_test.py  token_bytes.py
tokenizer/: token_bytes.pt  tokenizer.pkl
utils/: checkpoint.py  checkpoint_manager.py  common.py  dataloader.py
