[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=22.0.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "torch>=2.9.1",
    "huggingface-hub>=1.3.2",
    "kernels>=0.11.7",
    "numpy[cpu]>=2.4.1",
    "tiktoken>=0.12.0",
    "setuptools>=80.9.0",
    "datasets>=4.5.0",
]


# target torch to cuda 12.8 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "torch>=2.9.1",
]
gpu = [
    "torch>=2.9.1",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]
